# showspec

./: CMakeLists.txt  Makefile  MollweideSkyMap.cpp  MollweideSkyMap.h  README.md  README2016  antenna_pattern.cpp  antenna_pattern.h  basedefines.h  basestring.cpp  basestring.h  basestructs.cpp  basestructs.h  beam2016implementation.cpp  beam2016implementation.h  beam2016test.cpp  bg_array.cpp  bg_array.h  bg_bedlam.cpp  bg_bedlam.h  bg_components.cpp  bg_components.h  bg_date.cpp  bg_date.h  bg_defines.h  bg_fits.cpp  bg_fits.h  bg_geo.cpp  bg_geo.h  bg_globals.cpp  bg_globals.h  bg_norm.cpp  bg_norm.h  bg_stat.cpp  bg_stat.h  bg_total_power.cpp  bg_total_power.h  bg_units.cpp  bg_units.h  ce300e.cpp  (+66 more)
gsm/: Makefile  README
